force-app/main/default/objects/Case/fields/RW_Flat_No__c.field-meta.xml
<CustomField>
    <fullName>RW_Flat_No__c</fullName>
    <label>Flat No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>