force-app/main/default/objects/Case/fields/RW_Immediate_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>RW_Immediate_Manager_Email__c</fullName>
    <label>Immediate Manager Email</label>
    <type>Email</type>
</CustomField>