force-app/main/default/objects/Case/fields/RW_Is_Escalated__c.field-meta.xml
<CustomField>
    <fullName>RW_Is_Escalated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Escalated</label>
    <type>Checkbox</type>
</CustomField>