force-app/main/default/objects/Case/fields/RW_Is_Task_Created__c.field-meta.xml
<CustomField>
    <fullName>RW_Is_Task_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Task Created</label>
    <type>Checkbox</type>
</CustomField>