force-app/main/default/objects/Case/fields/RW_Legal_Complaint1__c.field-meta.xml
<CustomField>
    <fullName>RW_Legal_Complaint1__c</fullName>
    <label>Legal Complaint</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>RW_Legal_Complaint__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>National Commision</fullName>
            </value>
            <value>
                <fullName>State  Commision</fullName>
            </value>
            <value>
                <fullName>City Civil Court</fullName>
            </value>
            <value>
                <fullName>Police Complain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>