force-app/main/default/objects/Case/fields/RW_Legal_Complaint__c.field-meta.xml
<CustomField>
    <fullName>RW_Legal_Complaint__c</fullName>
    <label>Legal Complaint Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Potential Legal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>