force-app/main/default/objects/Case/fields/RW_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>RW_Owner_Name__c</fullName>
    <formula>IF( !ISBLANK(Owner:User.Id), Owner:User.FirstName+&quot; &quot;+ Owner:User.LastName,  Owner:Queue.QueueName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Name</label>
    <type>Text</type>
</CustomField>