force-app/main/default/objects/Case/fields/RW_Project_Text__c.field-meta.xml
<CustomField>
    <fullName>RW_Project_Text__c</fullName>
    <label>Project Text</label>
    <length>20</length>
    <type>Text</type>
</CustomField>