force-app/main/default/objects/Case/fields/RW_Project_Unit__c.field-meta.xml
<CustomField>
    <fullName>RW_Project_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Unit</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$Source.RW_Project__c</field>
            <operation>equals</operation>
            <valueField>Project_Unit__c.RW_Project__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Project_Unit__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>