force-app/main/default/objects/Case/fields/RW_Project_Unit_Text__c.field-meta.xml
<CustomField>
    <fullName>RW_Project_Unit_Text__c</fullName>
    <label>Project Unit Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>