force-app/main/default/objects/Case/fields/RW_Query_Type__c.field-meta.xml
<CustomField>
    <fullName>RW_Query_Type__c</fullName>
    <label>Query Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Query</fullName>
                <default>true</default>
                <label>Query</label>
            </value>
            <value>
                <fullName>Complaint</fullName>
            </value>
            <value>
                <fullName>General Feedback</fullName>
            </value>
            <value>
                <fullName>Appreciation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>