force-app/main/default/objects/Case/fields/RW_Queue_Id1__c.field-meta.xml
<CustomField>
    <fullName>RW_Queue_Id1__c</fullName>
    <label>Queue Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>