force-app/main/default/objects/Case/fields/RW_Queue_Id__c.field-meta.xml
<CustomField>
    <fullName>RW_Queue_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Queue Id</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>