force-app/main/default/objects/Case/fields/RW_Repeat_Complaint__c.field-meta.xml
<CustomField>
    <fullName>RW_Repeat_Complaint__c</fullName>
    <label>Repeat Complaint</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>