force-app/main/default/objects/Case/fields/RW_Reporting_4_Email__c.field-meta.xml
<CustomField>
    <fullName>RW_Reporting_4_Email__c</fullName>
    <label>Reporting 4 Email</label>
    <type>Email</type>
</CustomField>