force-app/main/default/objects/Case/fields/RW_Resolution_comments__c.field-meta.xml
<CustomField>
    <fullName>RW_Resolution_comments__c</fullName>
    <label>Resolution comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>