force-app/main/default/objects/Case/fields/RW_RM_Name__c.field-meta.xml
<CustomField>
    <fullName>RW_RM_Name__c</fullName>
    <label>RM Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aakash Motwani</fullName>
            </value>
            <value>
                <fullName>Aarti Kocharekar</fullName>
            </value>
            <value>
                <fullName>Abhishek Acharya</fullName>
            </value>
            <value>
                <fullName>Abhishek Varma</fullName>
            </value>
            <value>
                <fullName>Aditi Dubey</fullName>
            </value>
            <value>
                <fullName>Aditya Desai</fullName>
                <label>ADITYA DESAI</label>
            </value>
            <value>
                <fullName>Adrian Dsouza</fullName>
            </value>
            <value>
                <fullName>A Harendra Sharma</fullName>
            </value>
            <value>
                <fullName>AKHIL RAJ</fullName>
            </value>
            <value>
                <fullName>Akshada Mogare</fullName>
            </value>
            <value>
                <fullName>Akshay Kadoo</fullName>
            </value>
            <value>
                <fullName>Amrita Dhall</fullName>
            </value>
            <value>
                <fullName>Amrita Parui</fullName>
            </value>
            <value>
                <fullName>Anand Shah</fullName>
            </value>
            <value>
                <fullName>Aniket Naik</fullName>
            </value>
            <value>
                <fullName>Aniket Salve</fullName>
            </value>
            <value>
                <fullName>Aniruddha Kulkarni</fullName>
            </value>
            <value>
                <fullName>Anjali Dinesh</fullName>
            </value>
            <value>
                <fullName>Ankita Bhosle</fullName>
            </value>
            <value>
                <fullName>Arfiyan Shaikh</fullName>
            </value>
            <value>
                <fullName>Arindam Mukherjee</fullName>
            </value>
            <value>
                <fullName>Ashish Ghogale</fullName>
            </value>
            <value>
                <fullName>Atharva Dangat</fullName>
            </value>
            <value>
                <fullName>Atul Tambe</fullName>
            </value>
            <value>
                <fullName>Avadut Tandel</fullName>
            </value>
            <value>
                <fullName>Babita Kapoor</fullName>
            </value>
            <value>
                <fullName>Bhagyashree Mengane</fullName>
            </value>
            <value>
                <fullName>Bhavesh Bhatt</fullName>
            </value>
            <value>
                <fullName>Bhavesh Limbachiya</fullName>
            </value>
            <value>
                <fullName>Bhavita Lodaya</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>