force-app/main/default/objects/Case/fields/RW_RM_Remarks__c.field-meta.xml
<CustomField>
    <fullName>RW_RM_Remarks__c</fullName>
    <label>Case Remarks</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>