force-app/main/default/objects/Case/fields/RW_Waiting_Response_From__c.field-meta.xml
<CustomField>
    <fullName>RW_Waiting_Response_From__c</fullName>
    <label>Waiting Response From</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>