force-app/main/default/objects/Case/fields/Sourcing_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Sourcing_Manager_Email__c</fullName>
    <label>Sourcing Manager Email</label>
    <type>Email</type>
</CustomField>