force-app/main/default/objects/Case/fields/Stop_Emails__c.field-meta.xml
<CustomField>
    <fullName>Stop_Emails__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stop Emails</label>
    <type>Checkbox</type>
</CustomField>