force-app/main/default/objects/Case/fields/Task_Link__c.field-meta.xml
<CustomField>
    <fullName>Task_Link__c</fullName>
    <label>Task Link</label>
    <type>TextArea</type>
</CustomField>