force-app/main/default/objects/Case/fields/TAT__c.field-meta.xml
<CustomField>
    <fullName>TAT__c</fullName>
    <formula>ClosedDate -  CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TAT Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>