force-app/main/default/objects/Case/fields/TAT_text__c.field-meta.xml
<CustomField>
    <fullName>TAT_text__c</fullName>
    <formula>IF (TAT__c &gt; 0, 
TEXT(FLOOR(TAT__c)) &amp; &quot; Days &quot; &amp; 
TEXT( FLOOR( 24 * (TAT__c- FLOOR(TAT__c) ))) &amp; &quot; Hours &quot; &amp; 
TEXT( ROUND(60 * (ROUND( 24 * (TAT__c - FLOOR(TAT__c) ),8) - FLOOR( 
ROUND( 24 * (TAT__c - FLOOR(TAT__c) ),8)) ),0)) &amp; &quot; Min &quot; 
, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TAT</label>
    <type>Text</type>
</CustomField>