force-app/main/default/objects/Case/fields/Time_Of_Case_Open__c.field-meta.xml
<CustomField>
    <fullName>Time_Of_Case_Open__c</fullName>
    <formula>TIMEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Of Case Open</label>
    <type>Time</type>
</CustomField>