force-app/main/default/objects/Case/fields/TL_Name__c.field-meta.xml
<CustomField>
    <fullName>TL_Name__c</fullName>
    <formula>RW_Project__r.Team_Leader__r.FirstName &amp; &quot; &quot; &amp; RW_Project__r.Team_Leader__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TL Name</label>
    <type>Text</type>
</CustomField>