force-app/main/default/objects/Case/fields/Transfer_to_RM__c.field-meta.xml
<CustomField>
    <fullName>Transfer_to_RM__c</fullName>
    <label>Transfer to RM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adarsh</fullName>
            </value>
            <value>
                <fullName>Alok</fullName>
            </value>
            <value>
                <fullName>Chayan</fullName>
            </value>
            <value>
                <fullName>Pankaj</fullName>
            </value>
            <value>
                <fullName>Ratnesh</fullName>
            </value>
            <value>
                <fullName>Rishi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>