force-app/main/default/objects/Case/fields/Triggered_for_CRN_update__c.field-meta.xml
<CustomField>
    <fullName>Triggered_for_CRN_update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Triggered for CRN update</label>
    <type>Checkbox</type>
</CustomField>