force-app/main/default/objects/Case/recordTypes/Channel_Partner_Portal.recordType-meta.xml
<RecordType>
    <fullName>Channel_Partner_Portal</fullName>
    <active>true</active>
    <businessProcess>Channel Partner Portal</businessProcess>
    <label>Channel Partner Portal</label>
</RecordType>