force-app/main/default/objects/Case/recordTypes/Customer.recordType-meta.xml
<RecordType>
    <fullName>Customer</fullName>
    <active>true</active>
    <businessProcess>Customer</businessProcess>
    <description>This record type is for case against the existing customer</description>
    <label>Customer</label>
</RecordType>