force-app/main/default/objects/Case/recordTypes/Feedback.recordType-meta.xml
<RecordType>
    <fullName>Feedback</fullName>
    <active>true</active>
    <businessProcess>Feedback</businessProcess>
    <label>Customer Feedback</label>
</RecordType>