force-app/main/default/objects/Case/recordTypes/IT.recordType-meta.xml
<RecordType>
    <fullName>IT</fullName>
    <active>true</active>
    <businessProcess>IT</businessProcess>
    <description>This record type is for case against the IT team</description>
    <label>IT</label>
</RecordType>