force-app/main/default/objects/Case/recordTypes/Visit_Feedback.recordType-meta.xml
<RecordType>
    <fullName>Visit_Feedback</fullName>
    <active>true</active>
    <businessProcess>Feedback</businessProcess>
    <description>Visit feedback</description>
    <label>Visit Feedback</label>
</RecordType>