force-app/main/default/objects/Case/validationRules/Birthday_Wishes_Email.validationRule-meta.xml
<ValidationRule>
    <fullName>Birthday_Wishes_Email</fullName>
    <active>true</active>
    <errorConditionFormula>IF(OR(Subject == &quot;Birthday wishes !!&quot;, Subject == &quot;Birthday Wishes !!&quot;) , true, false)</errorConditionFormula>
    <errorMessage>Case should not be created because this is an internal Birthday wishes email.</errorMessage>
</ValidationRule>