force-app/main/default/objects/Case/validationRules/Case_can_reopen_only_once_or_cant_reopen.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_can_reopen_only_once_or_cant_reopen</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
RecordType.Name == &apos;Channel Partner Portal&apos;,
AND(ISPICKVAL(PRIORVALUE(Status), &apos;Case Closed&apos;), ISPICKVAL(Status, &apos;Reopened&apos;)),
$Label.Disable_all_validations_from_case == &quot;false&quot; /*Added by Prashant to control disabling all validations together*/
)</errorConditionFormula>
    <errorMessage>Case cannot be Reopened</errorMessage>
</ValidationRule>