force-app/main/default/objects/Case/validationRules/Case_cannot_be_closed_after_reopened.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_cannot_be_closed_after_reopened</fullName>
    <active>false</active>
    <errorConditionFormula>AND(!ISPICKVAL( RW_Approval_Status__c , &apos;Approved&apos;), !ISBLANK( RW_Case_Reopened_Date__c), ISPICKVAL( Status, &apos;Case Closed&apos;))</errorConditionFormula>
    <errorMessage>If approval status is not approved , case cannot be closed.</errorMessage>
</ValidationRule>