force-app/main/default/objects/Case/validationRules/Case_Resolution_field_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_Resolution_field_mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Status , &apos;Resolved&apos;) ,
ISBLANK(RW_Resolution_comments__c),
$Label.Disable_all_validations_from_case == &quot;false&quot; /*Added by Prashant to control disabling all validations together*/ 
)</errorConditionFormula>
    <errorDisplayField>RW_Resolution_comments__c</errorDisplayField>
    <errorMessage>Case Resolution Comments is mandatory if Case gets resolved</errorMessage>
</ValidationRule>