force-app/main/default/objects/Case/validationRules/Case_Status_Reopened.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_Status_Reopened</fullName>
    <active>false</active>
    <errorConditionFormula>AND(!ISPICKVAL(PRIORVALUE(Status) ,&apos;Case Closed&apos;),  ISPICKVAL( Status , &apos;Reopened&apos;)  )</errorConditionFormula>
    <errorMessage>Case Status cannot be reopened until case in not closed.</errorMessage>
</ValidationRule>