force-app/main/default/objects/Case/validationRules/complaint_type_and_subtype_is_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>complaint_type_and_subtype_is_mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>/*AND(
    ISPICKVAL(Status, &apos;Case Closed&apos;),
     ISPICKVAL(RW_Case_Type__c , &apos;Complaint&apos;), 
    OR(
        ISPICKVAL(RW_Complaint_Type__c, &apos;&apos;),
        ISPICKVAL(RW_Complaint_SubType__c, &apos;&apos;)
    ),
	OR(
		RecordTypeId = &apos;01228000000nYBX&apos;,
		RecordTypeId = &apos;012J40000008V2A&apos;
	),
ISBLANK(locobuzz__Locobuzz_ID__c)
)*/


AND(
    ISPICKVAL(Status, &apos;Case Closed&apos;), 
    OR(
        ISPICKVAL(Customer_Lifecycle_Touchpoint__c, &apos;&apos;),
        ISPICKVAL(RW_Complaint_Type__c, &apos;&apos;),
        ISPICKVAL(RW_Complaint_SubType__c, &apos;&apos;)
    ),
	OR(
		RecordTypeId = &apos;01228000000nYBX&apos;,
		RecordTypeId = &apos;012J40000008V2A&apos;
	),
ISBLANK(locobuzz__Locobuzz_ID__c),
$Label.Disable_all_validations_from_case == &quot;false&quot;, /*Added by Prashant to control disabling all validations together*/
NOT(CONTAINS( Subject , &apos;Undeliverable:&apos;)) /*Added by Vinay 23-05-2025 */
)</errorConditionFormula>
    <errorMessage>Customer Lifecycle Touchpoint, complaint type and subtype is mandatory</errorMessage>
</ValidationRule>