force-app/main/default/objects/Case/validationRules/Mandatory_fields_before_Case_is_closed.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_fields_before_Case_is_closed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(IF(AND( RecordType.Name == &apos;Channel Partner Portal&apos;,ISPICKVAL(Status, &apos;Case Closed&apos;) ,RW_Project__c == null), TRUE , FALSE ),
$Label.Disable_all_validations_from_case == &quot;false&quot; /*Added by Prashant to control disabling all validations together*/)</errorConditionFormula>
    <errorDisplayField>RW_Project__c</errorDisplayField>
    <errorMessage>Project tagging is compulsory.</errorMessage>
</ValidationRule>