force-app/main/default/objects/Case/validationRules/Mandatory_fields_before_tagging_project.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_fields_before_tagging_project</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
		RecordType.Name == &apos;Channel Partner Portal&apos;,
		RW_Project__c != null, 
		OR(
			ISPICKVAL(Case_Category__c , &apos;&apos;),
			ISPICKVAL(Case_Sub_Category__c , &apos;&apos;)
		),
$Label.Disable_all_validations_from_case == &quot;false&quot; /*Added by Prashant to control disabling all validations together*/
	)

/*IF(AND(RecordType.Name == &apos;Channel Partner Portal&apos;, RW_Project__c != null,  ISPICKVAL(Case_Category__c , &apos;&apos;),ISPICKVAL(Case_Sub_Category__c , &apos;&apos;) ), TRUE , FALSE )*/</errorConditionFormula>
    <errorMessage>&quot;Case Category&quot; and &quot;Case Sub Category&quot; are Mandatory.</errorMessage>
</ValidationRule>