force-app/main/default/objects/Case/validationRules/Post_Possession_Customer_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Post_Possession_Customer_validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 NOT(ISPICKVAL(  Origin , &apos;Email&apos;)), 
ISPICKVAL( Customer_Lifecycle_Touchpoint__c, &apos;Post-Possession&apos;),
OR(
/*ISBLANK(Opportunity__c),*/
AND(
NOT(ISBLANK(Opportunity__c)),
ISBLANK(Opportunity__r.Booking__r.RW_Key_handover_date__c)
)
),
$Label.Disable_all_validations_from_case == &quot;false&quot; /*Added by Prashant to control disabling all validations together*/
)</errorConditionFormula>
    <errorMessage>Complaint type selected is for post possession customers.</errorMessage>
</ValidationRule>