force-app/main/default/objects/Case/validationRules/Post_Possession_Related_RM_Tagging.validationRule-meta.xml
<ValidationRule>
    <fullName>Post_Possession_Related_RM_Tagging</fullName>
    <active>false</active>
    <description>You do not have access to the Post Possession Related Complaint. Please contact your system admin.</description>
    <errorConditionFormula>AND(ISPICKVAL(RW_Complaint_Type__c, &quot;Post Possession Related&quot;), 
!ISPICKVAL(RW_RM_Name__c, &quot;Kalpita Dewadiga&quot;))</errorConditionFormula>
    <errorMessage>You do not have access to the Post Possession Related Complaint. Please contact your system admin.</errorMessage>
</ValidationRule>