force-app/main/default/objects/Case/validationRules/Post_Possession_Related_RM_Tagging_Rev.validationRule-meta.xml
<ValidationRule>
    <fullName>Post_Possession_Related_RM_Tagging_Rev</fullName>
    <active>true</active>
    <description>You do not have access to the this Complaint type. Please contact your system admin.</description>
    <errorConditionFormula>AND(!ISPICKVAL(RW_Complaint_Type__c, &quot;Post Possession Related&quot;), 
ISPICKVAL(RW_RM_Name__c, &quot;Aaliya Kirkire&quot;),
$Label.Disable_all_validations_from_case == &quot;false&quot; /*Added by Prashant to control disabling all validations together*/)</errorConditionFormula>
    <errorMessage>You do not have access to this Complaint type. Please contact your system admin.</errorMessage>
</ValidationRule>