force-app/main/default/objects/Case/listViews/AllOpenCases.listView-meta.xml
<ListView>
    <fullName>AllOpenCases</fullName>
    <columns>RW_Project__c</columns>
    <columns>RW_RM_Name__c</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Current_Stage__c</columns>
    <columns>CASES.RECORDTYPE</columns>
    <columns>CASES.STATUS</columns>
    <columns>RW_Case_Type__c</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>RW_Complaint_Type__c</columns>
    <columns>OWNER_NAME</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>CASES.SUBJECT</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Case_Escalation_TAT__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All Open Cases</label>
</ListView>