force-app/main/default/objects/Case/listViews/Amrapali_Test_project_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Amrapali_Test_project_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Amrapali Test project-Queue</label>
    <queue>Amrapali_Test_project_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>