force-app/main/default/objects/Case/listViews/CP_Email_Queue_Case.listView-meta.xml
<ListView>
    <fullName>CP_Email_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>CP Email Queue</label>
    <queue>CP_Email_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>