force-app/main/default/objects/Case/listViews/Department_wise_Cases.listView-meta.xml
<ListView>
    <fullName>Department_wise_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Department__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Department wise Cases</label>
</ListView>