force-app/main/default/objects/Case/listViews/email_to_case_queue_Case.listView-meta.xml
<ListView>
    <fullName>email_to_case_queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>email to case queue</label>
    <queue>email_to_case_queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>