force-app/main/default/objects/Case/listViews/Locobuzz.listView-meta.xml
<ListView>
    <fullName>Locobuzz</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>locobuzz__Locobuzz_ID__c</columns>
    <columns>RW_Project__c</columns>
    <columns>RW_Project_Unit__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Locobuzz_Agent_Name__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>CASES.ORIGIN</field>
        <operation>equals</operation>
        <value>Social Media</value>
    </filters>
    <label>Locobuzz</label>
</ListView>