force-app/main/default/objects/Case/listViews/MyCases.listView-meta.xml
<ListView>
    <fullName>MyCases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>RW_Flat_No__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.TYPE</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>RW_Complaint_Sub_Subtype__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CLOSED_DATE</columns>
    <columns>AgeingOfComplaints__c</columns>
    <columns>RW_RM_Remarks__c</columns>
    <columns>Case_Description__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Cases</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>